# github-monitor

./: .gitignore  CLAUDE.md  CONFIG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: config-event-handler.yaml  config-monitor.yaml  config-pr-comment.yaml
src/github_monitor/: __init__.py  event_handler.py  github_client.py  monitor.py  pr_comment.py  utils.py
src/github_monitor/cli/: cli.py  config_loader.py  event_handler.py  monitor.py  pr_comment.py
tests/: __init__.py  test_cli_event_handler.py  test_cli_monitor.py  test_cli_pr_comment.py  test_event_handler.py  test_monitor.py  test_pr_comment.py  test_utils.py
