[project]
name = "github-monitor"
version = "0.1.0"
description = "Monitor GitHub issues, PRs, issues and PRs comments through polling with gh"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"nats-py>=2.1.0,<3",
	"cyclopts>4.2.0,<5",
]

[project.scripts]
github-monitor = "github_monitor.cli.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes (includes unused imports)
    "I",     # isort (import sorting)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
